Delayed promise chaining

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="promisechaining.js"></script>
+    
+    <script src="promiseChainWithDelay.js"></script>
 </body>
 </html>
