test: promise methods

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    
-    <script src="promiseChainWithDelay.js"></script>
+    <div id="title">This is a title</div>
+    <script src="promiseMethods/all.js"></script>
 </body>
 </html>
