--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="title">This is a title</div>
-    <script src="promiseMethods/all.js"></script>
+    
+    <input type="text" id="input-field"/>
+    <script src="debouncing/input.js"></script>
 </body>
 </html>
